--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html>
       <title> bew page </title>
       <body>
-            hey, through web page
+            hello, through web page
           </body>
           </html>
           
